<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/place_details_container"
    style="@style/HorizontalLinearLayout">

    <ImageView
        android:id="@+id/place_image"
        style="@style/LocationImage"
        android:contentDescription="@string/location_image" />

    <LinearLayout
        style="@style/VerticalLinearLayout"
        android:layout_marginLeft="@dimen/layout_margin_default"
        android:layout_marginRight="@dimen/layout_margin_default">

        <TextView
            android:id="@+id/place_name"
            style="@style/LocationNameText"
            android:layout_marginBottom="@dimen/layout_margin_default"
            tools:text="@string/place_name" />

        <LinearLayout style="@style/HorizontalLinearLayout">

            <TextView
                style="@style/LocationLabelText"
                android:layout_marginEnd="6dp"
                android:layout_marginRight="6dp"
                android:text="@string/address" />

            <TextView
                android:id="@+id/place_address"
                style="@style/LocationDetailsText"
                android:autoLink="map"
                tools:text="@string/place_address" />

        </LinearLayout>

        <LinearLayout style="@style/HorizontalLinearLayout">

            <TextView
                style="@style/LocationLabelText"
                android:layout_marginEnd="@dimen/text_align_space"
                android:layout_marginRight="@dimen/text_align_space"
                android:text="@string/phone_number" />

            <TextView
                android:id="@+id/place_phone_number"
                style="@style/LocationDetailsText"
                android:autoLink="phone"
                android:textColorLink="@color/default_text_color"
                tools:text="@string/place_phone_number" />

        </LinearLayout>

        <LinearLayout
            style="@style/HorizontalLinearLayout"
            android:layout_marginBottom="@dimen/layout_margin_default">

            <TextView
                style="@style/LocationLabelText"
                android:layout_marginEnd="@dimen/text_align_space"
                android:layout_marginRight="@dimen/text_align_space"
                android:text="@string/hours" />

            <TextView
                android:id="@+id/place_hours"
                style="@style/LocationDetailsText"
                tools:text="@string/place_hours" />

        </LinearLayout>

    </LinearLayout>

</LinearLayout>
